<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.adminui.eventexecution.EventControlFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventcontrol_status"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/primary_event_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventcontrol_startbtn" />

            <Button
                android:id="@+id/secondary_event_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventcontrol_pausebtn" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>